--- a/nestjs-introduction/documentation/coverage.html
+++ b/nestjs-introduction/documentation/coverage.html
@@ -238,16 +238,16 @@
                 <span class="coverage-count">(0/1)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./controllers/PostsController.html">src/posts/posts.controller.ts</a>
             </td>
             <td>controller</td>
             <td>PostsController</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+            <td align="right" data-sort="83">
+                <span class="coverage-percent">83 %</span>
+                <span class="coverage-count">(5/6)</span>
             </td>
         </tr>
         <tr class="low">
@@ -310,16 +310,16 @@
                 <span class="coverage-count">(0/1)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/UsersService.html">src/users/providers/users.service.ts</a>
             </td>
             <td>injectable</td>
             <td>UsersService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+            <td align="right" data-sort="83">
+                <span class="coverage-percent">83 %</span>
+                <span class="coverage-count">(5/6)</span>
             </td>
         </tr>
         <tr class="low">
